; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_platform.c_platform_nice.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_platform.c_platform_nice.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_WARN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"WARNING: nice %d failed (function not implemented)\00", align 1
@M_ERRNO = common dso_local global i32 0, align 4
@M_INFO = common dso_local global i32 0, align 4
@errno = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @platform_nice(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i32, i32* @M_WARN, align 4
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @msg(i32 %6, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %7)
  br label %9

9:                                                ; preds = %5, %1
  ret void
}

declare dso_local i32 @msg(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
